--- a/ucapanhbd.html
+++ b/ucapanhbd.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>HBD Sayang Dari Abdul Kholik</title>
+    <title>HBD Bang Koding Dari Micola</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link
       rel="stylesheet"
@@ -20,17 +20,17 @@
       class="bg-white border px-10 py-8 border-4 border-gray-300 shadow-lg shadow-blue-300 rounded-xl text-center animate__animated animate__backInDown m-8 w-80"
       id="kartu"
     >
-      <h1 class="text-3xl">Happy Birthday sayang yang ke 25</h1>
+      <h1 class="text-3xl">Happy Birthday</h1>
       <h1
         class="text-4xl text-blue-500 font-bold animate__animated animate__pulse animate__infinite"
       >
-        Putri Aulia
+        Bang Koding
       </h1>
       <button
         class="p-2 bg-blue-600 text-white rounded mt-5 hover:bg-blue-900 transition ease-in w-full animate__animated animate__delay-1s animate__tada"
         onclick="ubahKartu()"
       >
-        Klik Disini Sayang❤!
+        Klik Disini Bro!
       </button>
     </div>
 
@@ -44,13 +44,12 @@
       let kartu = document.getElementById("kartu");
       function ubahKartu() {
         kartu.innerHTML = `    <h1 class="font-semibold text-wrap animate__animated animate__zoomIn">
-      Di hari istimewa ini, aku bersyukur karena Tuhan telah menciptakanmu dan menempatkanmu di sisiku. Melihatmu mencapai seperempat abad ini membuatku menyadari betapa beruntungnya aku bisa berbagi setiap momen bersamamu. Aku tidak hanya jatuh cinta pada keindahanmu, tapi juga pada kebaikan hatimu, senyummu yang menawan, dan caramu melihat dunia.
-      Semoga di usiamu yang baru ini, setiap langkahmu dipenuhi dengan kebahagiaan, kesehatan, dan kesuksesan. Aku akan selalu ada di sini untuk menemanimu, mendukung setiap mimpimu, dan menjadi bahu yang bisa kamu sandarkan.
-      Selamat merayakan hari bahagiamu, Sayang. Semoga cinta kita semakin kuat dan abadi. Semoga kita terus bisa
+      Selamat ulang tahun, bro! Semoga tahun ini makin banyak kebahagiaan,
+      rezeki lancar, dan segala impian jadi kenyataan. Semoga kita terus bisa
       bareng-bareng, seru-seruan, dan saling dukung ya! 🎉🎂
     </h1>
     <h2 class="mt-3 animate__animated animate__fadeIn">
-      - Dari : Abdul Kholik -
+      - Dari : Micola Arighi -
     </h2>
     <button
       class="p-2 bg-slate-600 text-white rounded mt-5 hover:bg-slate-900 transition ease-in w-full animate__animated animate__delay-1s animate__tada"
